# jurisai-monorepo

./: .gitignore  .railwayignore  CLAUDE.md  DEPLOYMENT.md  JurisAI_Project_Overview.md  RAILWAY-DEPLOYMENT.md  RAILWAY_DEPLOYMENT.md  SECURE-CREDENTIALS.md  VERCEL_DEPLOYMENT.md  access_token.txt  codecov.yml  login.py  login_fixed.py  make_admin.py  package-lock.json  package.json  railway-blue-green.toml  railway.json  railway.toml  test-production-config.sh  test-railway-connectivity.sh  test-railway-migration.sh  token.json  token.txt  token_response.json  update_user_role.py
.github/: README.md
.qodo/: history.sqlite
apps/backend/: .coverage  .env  .env.example  .flake8  README.md  alembic.ini  coverage.xml  env_sample.txt  pyproject.toml  railway.toml  requirements.txt  test_auth.py  verify-models.py
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 20250402_add_rbac_tables.py  a1b2c3d4e5f6_add_rbac_tables.py  b2c3d4e5f6a7_add_document_tables.py  c3d4e5f6a7b8_add_users_table.py  d4e5f6a7b8c9_add_feature_flags_table.py  e5f6a7b8c9d1_add_agent_tasks_table.py  f6a7b8c9d1e2_add_document_ownership.py  merge_heads_migration.py
apps/backend/sample_data/: cama.txt  constitution.txt  dangote_v_zenith.txt  evidence_act.txt  fg_v_shell.txt
apps/backend/scripts/: INSTALL_NOTES.md  README.md  blue-green-startup.sh  load_sample_data.py  load_samples.sh  manage_migrations.py  setup_models.py  startup.sh
apps/backend/src/: main.py
apps/backend/src/core/: cache.py  database.py  health.py
apps/backend/src/middleware/: __init__.py  permission.py  request_logger.py
apps/backend/src/models/: agent_task.py  document.py  feature_flag.py  permission.py  role.py  user.py
apps/backend/src/routes/: __init__.py  admin.py  agents.py  agents_enhanced.py  auth.py  documents.py  feature_flags.py  health.py  permissions.py  roles.py  search.py  summarization.py  system.py
apps/backend/src/schemas/: system.py  user.py
apps/backend/src/services/: __init__.py  agent_service.py  dependencies.py  document_processor.py  feature_flags.py  legal_summarizer.py
apps/backend/src/services/agents/: __init__.py  document_analyzer.py
apps/backend/tests/: README.md  conftest.py  test_agent_implementation.py  test_batch_processing.py  test_enhanced_agents.py  test_feature_flags.py  test_legal_summarizer.py  test_migrations.py  test_summarizer_openai.py
apps/backend/tests/api/: test_documents.py
apps/backend/tests/models/: test_document.py
docs/: 5_JurisAI_Project_Status.md  6_Project_Phase_Analysis.md  Agent AI Knowledge Analysis.md  Comprehensive_Design.md  Implementation_Plans.md  Implementation_Progress.md  JurisAI_MVP_Implementation.md  JurisAI_Pilot_Implementation.md  JurisAI_Prototype.md  (+15 more)
libs/ai-models/: pyproject.toml
libs/ai-models/src/: __init__.py  advanced_features.py
libs/ai-models/src/document_processing/: __init__.py  legal_ner.py  processor.py
libs/ai-models/src/finetuning/: __init__.py  finetune.py
libs/ai-models/src/retrieval/: __init__.py  rag.py
libs/ai-models/src/summarization/: __init__.py  enhanced_summarizer.py  summarizer.py
(+135 files in other folders)
