[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Mukhtartg <mukhtartanimugarba@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = "^2.10.6"
sqlalchemy = "^2.0.27"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
python-multipart = "^0.0.9"  # Required for file uploads
alembic = "^1.13.1"  # Required for database migrations
httpx = "^0.27.0"  # Required for OpenAI API calls
gunicorn = "^23.0.0"  # Required for production deployment

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.5"
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "^5.13.2"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
