[tool.poetry]
name = "ai-models"
version = "0.1.0"
description = ""
authors = ["Mukhtartg <mukhtartanimugarba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.49.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
