[tool.poetry]
name = "ai-models"
version = "0.1.0"
description = "AI Models for JurisAI"
authors = ["Mukhtartg <mukhtartanimugarba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.49.0"
langchain = "^0.0.353"
langchain-community = "^0.0.16"
faiss-cpu = "^1.7.4"
sentence-transformers = "^2.2.2"
pypdf2 = "^3.0.1"
accelerate = "^0.27.2"
torch = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
